# OptiCrib

./: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  README.md  main.cpp
src/: card.cpp  card.h  cardcollection.cpp  cardcollection.h  controller.cpp  controller.h  deck.cpp  deck.h  hand.cpp  hand.h  handmenu.cpp  handmenu.h  main.cpp  messagebox.cpp  messagebox.h  player.cpp  player.h  round.cpp  round.h  stack.cpp  stack.h
